---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2025-12-21
  Changes:
    - Revert use of Multispoil API: Works great for items that you keep in chests until they spoil, but not for sulfuric bacteria
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025-12-20
  Changes:
    - Sulfuric bacteria now uses the Multispoil API to spoil into 2 wood/woodchips, instead of 1
    - Reconstituted wood changed to yield 3 wood from 2 (+50%)
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-06-08
  Locale:
    - Add RU locale (credit: onseshigo)
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-04-27
  Changes:
    - Remove dependency on Resin from Wooden Industry with Voidcraft
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-04-24
  Changes:
    - Import graphics from wood universe assets
    - Change sulfuric bacteria pruning to require water instead of tungsten carbide
  Compatibility:
    - Add support for Voidcraft
---------------------------------------------------------------------------------------------------
Version: 1.0.3
  Balancing:
    - Add resin to mine results for sulfuric stromatolite
---------------------------------------------------------------------------------------------------
Version: 1.0.2
  Bugfixes:
    - Fix crash when Vulcanus does not have map gen settings
---------------------------------------------------------------------------------------------------
Version: 1.0.1
  Compatibility:
    - Add compatibility for Bioprocessing Group